# lwr_robot

./: aktualizuj.bash  stack.xml
lwr_bringup/: 2arm_lwr.launch  2arm_lwr.xml  CMakeLists.txt  deploy.lua  lwr.launch  lwr.xml  lwr_fake.launch  lwr_fakeservo.xml  mainpage.dox  manifest.xml  package.xml  simple_trajectory.py
lwr_bringup/KRL/: fri_start.src
lwr_bringup/config/: controllers.yaml
lwr_bringup/launch/: lwr.launch
lwr_defs/: mainpage.dox  manifest.xml
lwr_defs/defs/: gazebo_defs.xml  kuka_lwr_arm_defs.xml  kuka_lwr_arm_defs_dh.xml  kuka_lwr_arm_defs_export.xml  util_defs.xml
lwr_defs/meshes/lwr/: arm_segment_b.dae  base.STL  base_simplified.STL  link_1_export.STL  link_1_simplified.STL  link_2.STL  link_2_simplified.STL  link_3.STL  link_3_simplified.STL  link_4.STL  link_4_simplified.STL  link_5_export.STL  link_5_simplified.STL  link_6_export.STL  link_6_simplified.STL  link_7_export.STL  link_7_simplified.STL
lwr_defs/robots/: 2arm_lwr.urdf.xml  kuka_lwr_arm.urdf  kuka_lwr_arm.urdf.xml
lwr_impedance_controller/: CMakeLists.txt  mainpage.dox  manifest.xml
lwr_impedance_controller/model/: default.robmod  lwr_impedance_controller.robmod_diagram
lwr_impedance_controller/msg/: CartImpTrajectory.msg  CartImpTrajectoryPoint.msg  CartImpTrajectoryPoint.msg~  CartesianImpedance.msg
lwr_impedance_controller/src/: CartImpTrajectory.cpp  CartImpTrajectory.h  CartWrench.cpp  CartWrench.h  CartesianImpedance.cpp  ForceController.cpp  ForceController.h  ImpedanceProjection.cpp  ImpedanceProjection.h  ImpedanceTrajectoryGenerator.cpp  JointLimitsAvoidance.cpp  NullSpaceProjection.cpp  SingularityAvoidance.cpp  SumVectors2.cpp  VelocityProjection.cpp  VelocityProjection.h  jac.cpp
lwr_moveit_config/: .setup_assistant  package.xml
lwr_moveit_config/config/: fake_controllers.yaml  joint_limits.yaml  lwr.srdf
lwr_moveit_config/launch/: planning_context.launch
lwr_msgs/lwr_msgs/: CMakeLists.txt  package.xml
lwr_msgs/lwr_msgs/msg/: FriIntfState.msg  FriIntfStatistics.msg  FriRobotState.msg  LwrCmd.msg  LwrStatus.msg
lwr_msgs/rtt_lwr_msgs/: CMakeLists.txt  package.xml
lwr_simulation/: 2arm.launch  2lwr.launch  CMakeLists.txt  lwr.launch  mainpage.dox  manifest.xml  package.xml
lwr_simulation/config/: lwr_sim.ops  lwr_sim_new.ops
lwr_simulation/controllers/: 2arm_arms_trajectory_controllers.launch  2arm_trajectory_arm_controller.yaml  lwr_arms_trajectory_controllers.launch  lwr_trajectory_arm_controller.yaml
lwr_simulation/include/lwr_simulator/: lwr_controller.h  lwr_controller.h~
lwr_simulation/launch/: 2lwr_gazebo.launch  lwr_controller.launch  lwr_gazebo.launch
lwr_simulation/robots/: 2arm_kuka_lwr.launch  kuka_lwr.launch
lwr_simulation/src/: lwr_controller.cpp  lwr_controller.cpp~  signal_gen.cpp
lwr_simulation/worlds/: empty_throttled.world
