<package>
  <name>lwr_bringup</name>
  <version>0.0.1</version>
  <description>LWR bringup.</description>
  <maintainer email="konradb3@gmail.com">Konrad Banachowicz</maintainer>

  <license>BSD</license>

  <author>Konrad Banachowicz</author>

  <buildtool_depend>catkin</buildtool_depend>

  <run_depend>xacro</run_depend>
  <run_depend>lwr_fri</run_depend>
  <run_depend>oro_joint_state_publisher</run_depend>
  <run_depend>rtt_sensor_msgs</run_depend>
  <run_depend>rtt_geometry_msgs</run_depend>
  <run_depend>rtt_diagnostic_msgs</run_depend>
  <run_depend>rtt_control_msgs</run_depend>
  <run_depend>rtt</run_depend>
  <run_depend>rtt_ros</run_depend>
  <run_depend>rtt_rosnode</run_depend>
  <run_depend>rtt_roscomm</run_depend>
  <run_depend>rtt_rosparam</run_depend> 

</package>
